2012-08-01  Mark Wielaard  <mjw@redhat.com>

	* run-nm-self.sh: New test.
	* run-readelf-self.sh: Likewise.
	* test-subr.sh (testrun_on_self_quiet): New function.
	* Makefile.am (TESTS): Add run-nm-self.sh and run-readelf-self.sh.
	(EXTRA_DIST): Likewise.

2012-08-01  Mark Wielaard  <mjw@redhat.com>

	* test-subr.sh (self_test_files): New list of files.
	(testrun_on_self): New function.
	* run-elflint-self.sh: Use testrun_on_self.

2012-07-19  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (check_PROGRAMS): Add test-elf_cntl_gelf_getshdr.
	(TESTS): Add run-elf_cntl_gelf_getshdr.sh.
	(EXTRA_DIST): Likewise.
	(test_elf_cntl_gelf_getshdr_LDADD): New.
	test-elf_cntl_gelf_getshdr.c: New test program.
	run-elf_cntl_gelf_getshdr.sh: New test script.

2012-07-19  Mark Wielaard  <mjw@redhat.com>

	* run-elflint-self.sh: runtests on ../backends/*so files.

2012-07-19  Mark Wielaard  <mjw@redhat.com>

	* run-unstrip-n.sh: test_cleanup.
	* Makefile.am (EXTRA_DIST): Add testcore-rtlib-ppc.bz2.

2012-07-11  Mark Wielaard  <mjw@redhat.com>

	* run-readelf-macro.sh: New test.
	* testfilemacro.bz2: New testfile.
	* Makefile.am (TESTS): Add run-readelf-macro.sh.
	(EXTRA_DIST): Add run-readelf-macro.sh and testfilemacro.bz2.

2012-06-27  Mark Wielaard  <mjw@redhat.com>

	* run-readelf-gdb-index.sh: New test.
	* testfilegdbindex5.bz2: New testfile.
	* testfilegdbindex7.bz2: Likewise.
	* Makefile.am (TESTS): Add run-readelf-gdb-index.sh.
	(EXTRA_DIST): run-readelf-gdb_index.sh, testfilegdbindex5.bz2 and
	testfilegdbindex7.bz2.

2012-07-17  Mark Wielaard  <mjw@redhat.com>

	* testcore-rtlib-ppc.bz2: New testfile.
	* run-unstrip-n.sh: Check new ppc core testfile.

2012-06-26  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.am (check_PROGRAMS): Rename from noinst_PROGRAMS.

2012-06-26  Mark Wielaard  <mjw@redhat.com>

	* run-macro-test.sh: New test.
	* testfile-macinfo.bz2: New testfile.
	* testfile-macros.bz2: Likewise.

2012-05-07  Mark Wielaard  <mjw@redhat.com>
